manifests/06-users_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-deploy
  template:
    metadata:
      labels:
        app: users-deploy
    spec:
      containers:
      - name: users-deploy
        image: stepigor/ot7users:latest
        ports:
        - containerPort: 8080
