manifests/12-notifications_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-deploy
  template:
    metadata:
      labels:
        app: notifications-deploy
    spec:
      containers:
      - name: notifications-deploy
        image: stepigor/ot7notifications:latest
        ports:
        - containerPort: 8080
