manifests/07-users_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: users-deploy
