manifests/13-notifications_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: notifications-deploy
