manifests/14-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /users/(.*) 
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 80
      - path: /orders/(.*) 
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 80
      - path: /billing/(.*) 
        pathType: Prefix
        backend:
          service:
            name: billing-service
            port:
              number: 80
      - path: /notifications/(.*) 
        pathType: Prefix
        backend:
          service:
            name: notifications-service
            port:
              number: 80
